Added secondary database for temporalily store project image

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,7 +48,9 @@ db.default.driver="org.sqlite.JDBC"
 db.default.url="jdbc:sqlite:db.sqlite"
 ebean.default="result.*"
 
-
+db.secondary.driver=org.h2.Driver
+db.secondary.url="jdbc:h2:mem:play"
+ebean.secondary="models.*"
 
 
 # Logger
