--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,14 +44,19 @@ application.global=controllers.Global
 # evolutionplugin=disabled
 
 
-db.default.driver="org.sqlite.JDBC"
-db.default.url="jdbc:sqlite:db.sqlite"
+//db.default.driver="org.sqlite.JDBC"
+//db.default.url="jdbc:sqlite:db.sqlite"
+//ebean.default="result.*"
+
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/playdb"
+db.default.user=root
+db.default.pass=password
 ebean.default="result.*"
 
-db.secondary.driver=org.h2.Driver
-db.secondary.url="jdbc:h2:mem:play"
-ebean.secondary="models.*"
 
+db.default.logStatements=true
+logger.com.jolbox=DEBUG // for EBean
 
 # Logger
 # ~~~~~
