--- a/conf/application.conf
+++ b/conf/application.conf
@@ -54,6 +54,13 @@ db.default.user=root
 db.default.pass=password
 ebean.default="result.*"
 
+db.default.partitionCount=1
+db.default.maxConnectionsPerPartition=5
+db.default.minConnectionsPerPartition=1
+db.default.acquireIncrement=1
+db.default.acquireRetryAttempts=1
+db.default.acquireRetryDelay=5 seconds
+
 
 db.default.logStatements=true
 logger.com.jolbox=DEBUG // for EBean
