--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,16 +50,16 @@ application.global=controllers.Global
 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/playdb"
-db.default.user=root
-db.default.pass=password
+//db.default.user=root
+//db.default.pass=password
 ebean.default="result.*"
 
-db.default.partitionCount=1
-db.default.maxConnectionsPerPartition=5
-db.default.minConnectionsPerPartition=1
-db.default.acquireIncrement=1
-db.default.acquireRetryAttempts=1
-db.default.acquireRetryDelay=5 seconds
+//db.default.partitionCount=1
+//db.default.maxConnectionsPerPartition=5
+//db.default.minConnectionsPerPartition=1
+//db.default.acquireIncrement=1
+//db.default.acquireRetryAttempts=1
+//db.default.acquireRetryDelay=5 seconds
 
 
 db.default.logStatements=true
