Changed to dev mode

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,8 +50,8 @@ application.global=controllers.Global
 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/playdb"
-//db.default.user=root
-//db.default.pass=password
+db.default.user=root
+db.default.pass=password
 ebean.default="result.*"
 
 
